<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/buttonback"
            android:id="@+id/imageViewBack"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:contentDescription="@string/back" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/login_title"
            android:id="@+id/imageView8"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginRight="50dp"
            android:contentDescription="@string/title"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="25dp">

        <TextView
            android:text="@string/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_weight="1"
            android:textSize="30sp"
            android:padding="10dp" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextUserName"
            android:layout_weight="1"
            android:background="@drawable/regi_input"
            android:layout_width="150dp"
            android:layout_gravity="center"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="15dp">

        <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_weight="1"
            android:textSize="30sp"
            android:layout_margin="10dp" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextPassword"
            android:layout_weight="1"
            android:background="@drawable/regi_input"
            android:layout_gravity="center"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/login_login"
            android:id="@+id/buttonLogin"
            android:layout_weight="1"
            android:contentDescription="@string/ifo"
            android:padding="10dp"
            android:layout_marginRight="30dp"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/login_regi"
            android:id="@+id/imageViewRegister"
            android:layout_weight="1"
            android:contentDescription="@string/ifo"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="101dp"
        app:srcCompat="@drawable/logword"
        android:id="@+id/imageView20"
        android:contentDescription="@string/ifo"
        android:layout_marginTop="70dp" />

</LinearLayout>