<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title">

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.65"
            android:contentDescription="@string/back"
            app:srcCompat="@drawable/buttonback" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/title"
            app:srcCompat="@drawable/foodif_title"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/imageViewSearch"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            app:srcCompat="@drawable/search" />

        <ImageView
            app:srcCompat="@drawable/refresh"
            android:id="@+id/imageViewRefresh"
            android:layout_weight="0.3"
            android:layout_gravity="center"
            android:layout_width="30dp"
            android:layout_height="30dp" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listView"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="101dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/allfooodword"
            android:id="@+id/imageView17"
            android:contentDescription="@string/ifo"
            android:layout_weight="1.5" />
    </LinearLayout>

</LinearLayout>